k8s/manifests/ingress.yaml
# ingress exposes HTTP/HTTPS routes from outside the cluster to services within the cluster
## this ingress file defines config for load balancer
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  
spec:
  ingressClassName: nginx  # coz using nginx ingress controller
  rules:
  - host: go-web-app.local
    http:                   
      paths:
      - path: /           
        pathType: Prefix
        backend:
          service:
            name: go-web-app
            port:
              number: 80
